# TRETYAKOV_ALEKSAND_HSE_DE_PROBABILITY_THEORY_AND_MATH_STAT

./: .gitignore  README.md  pyproject.toml
task_1/: task_1.ipynb
