[project]
name = "HSE_DE_PROB_THEORY"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksTret",email = "aleks-tret@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
